syntax = "proto3";

package spinnaker.keel.api;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.keel.api";

import "Asset.proto";

service AssetRegistry {
  rpc upsertAsset (UpsertAssetRequest) returns (UpsertAssetResponse);
  // TODO: will need a delete asset
}

message UpsertAssetRequest {
  AssetContainer asset = 1;
}

message UpsertAssetResponse {
  repeated UpsertAssetResult result = 1;
}

message UpsertAssetResult {
  AssetId id = 1;
  UpsertAssetStatus status = 2;
}

enum UpsertAssetStatus {
  INSERTED = 0;
  UPDATED = 1;
  FAILED = 2;
}
